add some specification for modularity
